--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,74 +1,66 @@
-# 科技新闻聚合平台 - 持续集成工作流
-# 代码检查、测试、构建验证
-
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main, develop]
+    branches: [ main, develop ]
   pull_request:
-    branches: [main, develop]
+    branches: [ main, develop ]
 
 env:
   NODE_VERSION: '18'
-  PNPM_VERSION: '8.15.0'
+  PNPM_VERSION: '8'
 
 jobs:
   # 代码质量检查
-  lint-and-format:
-    name: 代码检查和格式化
+  lint-and-type-check:
+    name: Lint & Type Check
     runs-on: ubuntu-latest
-    
     steps:
-      - name: 检出代码
+      - name: Checkout code
         uses: actions/checkout@v4
-        
-      - name: 设置 Node.js
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          
-      - name: 设置 pnpm
+
+      - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: ${{ env.PNPM_VERSION }}
-          
-      - name: 获取 pnpm store 目录
+
+      - name: Get pnpm store directory
         shell: bash
-        run: echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-        
-      - name: 缓存 pnpm 依赖
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
         uses: actions/cache@v3
         with:
           path: ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-            
-      - name: 安装依赖
+
+      - name: Install dependencies
         run: pnpm install --frozen-lockfile
-        
-      - name: 类型检查
-        run: pnpm type-check
-        
-      - name: ESLint 检查
+
+      - name: Lint code
         run: pnpm lint
-        
-      - name: Prettier 格式检查
-        run: pnpm format:check
+
+      - name: Type check
+        run: pnpm type-check
 
   # 单元测试
   test:
-    name: 单元测试
+    name: Unit Tests
     runs-on: ubuntu-latest
-    
     services:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_PASSWORD: test_password
-          POSTGRES_USER: test_user
-          POSTGRES_DB: test_db
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: technews_test
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -76,9 +68,9 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-          
+
       redis:
-        image: redis:7
+        image: redis:7-alpine
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
@@ -86,110 +78,168 @@ jobs:
           --health-retries 5
         ports:
           - 6379:6379
-    
+
     steps:
-      - name: 检出代码
+      - name: Checkout code
         uses: actions/checkout@v4
-        
-      - name: 设置 Node.js
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          
-      - name: 设置 pnpm
+
+      - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: ${{ env.PNPM_VERSION }}
-          
-      - name: 缓存 pnpm 依赖
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
         uses: actions/cache@v3
         with:
-          path: ~/.pnpm-store
+          path: ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-            
-      - name: 安装依赖
+
+      - name: Install dependencies
         run: pnpm install --frozen-lockfile
-        
-      - name: 运行测试
-        run: pnpm test
+
+      - name: Setup test database
         env:
-          DATABASE_URL: postgresql://test_user:test_password@localhost:5432/test_db
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/technews_test
+        run: |
+          pnpm db:push
+          pnpm db:seed
+
+      - name: Run tests
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/technews_test
           REDIS_URL: redis://localhost:6379
-          
-      - name: 上传测试覆盖率
+          NODE_ENV: test
+        run: pnpm test
+
+      - name: Upload coverage reports
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage/lcov.info
           fail_ci_if_error: false
 
-  # 构建验证
+  # 构建检查
   build:
-    name: 构建验证
+    name: Build Check
     runs-on: ubuntu-latest
-    needs: [lint-and-format, test]
-    
-    strategy:
-      matrix:
-        package: [web, api, functions]
-    
+    needs: [lint-and-type-check]
     steps:
-      - name: 检出代码
+      - name: Checkout code
         uses: actions/checkout@v4
-        
-      - name: 设置 Node.js
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          
-      - name: 设置 pnpm
+
+      - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: ${{ env.PNPM_VERSION }}
-          
-      - name: 缓存 pnpm 依赖
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
         uses: actions/cache@v3
         with:
-          path: ~/.pnpm-store
+          path: ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-            
-      - name: 安装依赖
+
+      - name: Install dependencies
         run: pnpm install --frozen-lockfile
-        
-      - name: 构建 ${{ matrix.package }}
-        run: pnpm build --filter=${{ matrix.package }}
-        
-      - name: 缓存构建产物
+
+      - name: Build packages
+        run: pnpm build
+
+      - name: Cache build artifacts
         uses: actions/cache@v3
         with:
           path: |
-            apps/${{ matrix.package }}/dist
-            apps/${{ matrix.package }}/.next
-          key: ${{ runner.os }}-build-${{ matrix.package }}-${{ github.sha }}
+            apps/*/dist
+            apps/*/.next
+            packages/*/dist
+          key: ${{ runner.os }}-build-${{ github.sha }}
 
   # 安全扫描
   security:
-    name: 安全扫描
+    name: Security Scan
     runs-on: ubuntu-latest
-    
     steps:
-      - name: 检出代码
+      - name: Checkout code
         uses: actions/checkout@v4
-        
-      - name: 运行 Trivy 漏洞扫描
+
+      - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
           scan-ref: '.'
           format: 'sarif'
           output: 'trivy-results.sarif'
-          
-      - name: 上传 Trivy 扫描结果
+
+      - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
+
+  # Docker镜像构建
+  docker-build:
+    name: Docker Build
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    if: github.event_name == 'push'
+    strategy:
+      matrix:
+        service: [api, web]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKER_USERNAME }}/tech-news-${{ matrix.service }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./apps/${{ matrix.service }}/Dockerfile
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
