--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "clean": "turbo run clean && rm -rf node_modules",
-    "db:migrate": "turbo run db:migrate",
-    "db:seed": "turbo run db:seed",
-    "setup": "./scripts/setup-dev.sh"
+    "db:push": "cd packages/database && pnpm prisma db push",
+    "db:migrate": "cd packages/database && pnpm prisma migrate deploy",
+    "db:seed": "cd packages/database && pnpm prisma db seed",
+    "db:studio": "cd packages/database && pnpm prisma studio",
+    "setup": "./scripts/setup-dev.sh",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
