--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,34 +17,34 @@
   "dependencies": {
     "@tech-news-platform/database": "workspace:*",
     "@tech-news-platform/shared": "workspace:*",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
     "winston": "^3.11.0",
-    "dotenv": "^16.3.1",
     "zod": "^3.22.0"
   },
   "devDependencies": {
     "@tech-news-platform/config": "workspace:*",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/compression": "^1.7.5",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
-    "@types/nodemailer": "^6.4.14",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
+    "@types/nodemailer": "^6.4.19",
+    "@types/supertest": "^6.0.2",
+    "supertest": "^6.3.3",
     "tsx": "^4.6.0",
     "typescript": "^5.2.0",
-    "vitest": "^1.0.0",
-    "supertest": "^6.3.3",
-    "@types/supertest": "^6.0.2"
+    "vitest": "^1.0.0"
   }
 }
