--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,7 +27,9 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.9.7",
+    "rss-parser": "^3.13.0",
     "winston": "^3.11.0",
     "zod": "^3.22.0"
   },
