--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,11 +11,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "clsx": "^2.1.1",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "class-variance-authority": "^0.7.0",
-    "lucide-react": "^0.436.0"
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.436.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tech-news-platform/config": "workspace:*",
