feat: 添加预配置RSS源种子数据
- 新增20个知名科技媒体RSS源
- 包含国际媒体：TechCrunch、MIT Technology Review、Wired、The Verge等
- 包含中文媒体：36氪、虎嗅网、InfoQ中国、CSDN等
- 包含AI专门源：OpenAI Blog、Google AI Blog等
- 包含开发者源：GitHub Blog、Stack Overflow Blog、Dev.to等
- 新增数据库种子脚本和清理功能
- 支持一键添加/清理RSS源数据

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "db:migrate": "cd packages/database && pnpm prisma migrate deploy",
     "db:seed": "cd packages/database && pnpm prisma db seed",
     "db:studio": "cd packages/database && pnpm prisma studio",
+    "seed:rss": "cd packages/database && pnpm seed",
+    "seed:clear": "cd packages/database && pnpm seed:clear",
     "setup": "./scripts/setup-dev.sh",
     "prepare": "husky install"
   },
